# Subflow: Shop Now Flow
# Purpose: Validate Shop Now Flow on Help Center
# Prerequisite: Must be on Help Center screen with Shop Now link
appId: ${APP_ID}
---
- runScript: ../../screens/Common/CommonScreen.js
- runScript: ../../screens/Shop/ShopScreen.js
- runScript: ../../screens/SearchAndNav/SNAPPScreen.js

- assertVisible: ${output.snapp_navigation.shopNowButton}
- assertVisible: ${output.snapp_navigation.removeButton}
- tapOn: ${output.snapp_navigation.shopNowButton}

- waitForAnimationToEnd
- waitForAnimationToEnd

- runFlow:
    when:
      visible: ${output.common_buttons.closeBtn}
    commands:
      - swipe:
          direction: DOWN

- assertVisible: ${output.shop_screen.shopTitle}
- tapOn: ${output.common_buttons.backBtn}

- runFlow:
    when:
      visible: ${output.snapp_navigation.removeButton}
    commands:
      - tapOn: ${output.snapp_navigation.removeButton}