# Subflow: View Orders (Prescriptions) Signed In Flow
# Purpose: Validate View Orders Flow on Help Center as Signed In User
# Prerequisite: Must be on Help Center screen with View Orders link visible
appId: ${APP_ID}
---
- runScript: ../../screens/Common/CommonScreen.js
- runScript: ../../screens/Account/accountObjects.js
- runScript: ../../screens/SearchAndNav/searchNavObjects.js
- runScript: ../../screens/SearchAndNav/SearchScreen.js
- runScript: ../../screens/SearchAndNav/SNAPPScreen.js

- assertVisible: ${output.snapp_navigation.removeButton}
- assertVisible: ${output.snapp_navigation.viewOrdersButton}
- tapOn: ${output.snapp_navigation.viewOrdersButton}

- waitForAnimationToEnd
- assertVisible: ${output.common_navbars.ordersNavBar}
- tapOn: ${output.common_buttons.backBtn}

- runFlow:
    when:
      visible: ${output.snapp_navigation.removeButton}
    commands:
      - tapOn: ${output.snapp_navigation.removeButton}