appId: ${APP_ID}
---

- runScript: ../../screens/Benefits/DrugPricingScreen.js
- runScript: ../../screens/Common/CommonScreen.js
- runScript: ../../screens/Shop/CartScreen.js
- assertNotVisible: ${output.benefits_drug_pricing.member}
- assertVisible: ${output.common_navigation.year2025}
- assertVisible: ${output.common_navigation.year2026}
- assertVisible: ${output.benefits_spending_common.totalIncludesCoverage}
- assertVisible: ${output.shop_cart.totalLabel}
- assertVisible: ${output.common_navigation.deanUser}
- assertVisible: ${output.benefits_pharmacy_spending.viewPrescriptionClaims}

- tapOn: ${output.common_navigation.year2025}
- assertVisible: ${output.common_navigation.year2025}
- assertVisible: ${output.common_navigation.year2026}
- assertVisible: ${output.benefits_spending_common.totalIncludesCoverage}
- assertVisible: ${output.shop_cart.totalLabel}
- assertVisible: ${output.common_navigation.deanUser}
- assertVisible: ${output.benefits_pharmacy_spending.viewPrescriptionClaims}